@@ -2,10 +2,10 @@ import(grDevices)
 
 export(abline, arrows, assocplot, axTicks, axis, axis.Date,
        axis.POSIXct, barplot, barplot, box, boxplot, boxplot.stats,
-       bxp, chull, close.screen, co.intervals, contour, contourLines,
-       coplot, curve, dotchart, erase.screen, filled.contour,
-       fourfoldplot, frame, grid, hist, hist.default, identify, image,
-       layout, layout.show, lcm, legend, lines, lines.default,
+       bxp, chull, close.screen, co.intervals, colorRamp, colorRampPalette,
+        contour, contourLines, coplot, curve, dotchart, erase.screen,
+       filled.contour, fourfoldplot, frame, grid, hist, hist.default, 
+       identify, image, layout, layout.show, lcm, legend, lines, lines.default,
        locator, matlines, matplot, matpoints, mosaicplot, mtext,
        n2mfrow, nclass.FD, nclass.Sturges, nclass.scott, pairs,
        panel.smooth, par, persp, pie, plot, plot.design, plot.new,
